# openad_service_utils

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  async-mode.md  configuration.md  deployment.md  input-output.md  model-selection.md  templates.md  troubleshooting.md
examples/: run_implementation_server.py  run_server.py  single_implementation.py  template_implementation.py
examples/async_inference/: README.md  async_client_example.py  async_config_example.json  load_test.py
examples/generation/: README.md  classic_implementation.py  mw-generation-example.py  mw-generation-scaffold.py  run_server.py  simple_implementation.py
examples/properties/: README.md  implementation.py  implementation_nested.py  mw-properties-scaffold.py  nested_parameters.py  run_server.py
examples/properties/mw-properties-example-multi/: nested_parameters.py
examples/properties/mw-properties-example-single/: README.md  solubility_implementation.py
examples/properties/simple_implementation/: README.md  implementation.py  mw-properties-scaffold.py  property_classifier_example.py  solubility_implementation.py
examples/properties/simple_multi_application/: README.md  implementation_multiapp.py  nested_parameters.py
src/openad_service_utils/: __init__.py
src/openad_service_utils/algorithms/: core.py  registry.py
src/openad_service_utils/api/: async_call.py  cache.py  config.py  job_manager.py  lru.py  models.py  server.py
src/openad_service_utils/api/generation/: call_generation_services.py  generate_service_defs.py  generation_applications.py
src/openad_service_utils/api/properties/: call_property_services.py  generate_property_service_defs.py  properties__init__.py  property_core.py  utils.py
src/openad_service_utils/api/schemas/: service.py
src/openad_service_utils/common/: configuration.py  s3.py
src/openad_service_utils/common/algorithms/: core.py  registry.py
src/openad_service_utils/common/async_utils/: README.md  __init__.py  config.py  inference_manager.py  request_queue.py  resource_manager.py  service_adapters.py
src/openad_service_utils/implementation/: models.py
src/openad_service_utils/template/: base_classes.py
src/openad_service_utils/utils/: convert.py  logging_config.py
tests/: stress-test.js
tutorials/: protein_solubility_walkthrough.ipynb  tutorial-basis.md  tutorial-protein-solubility.md
(+10 files in other folders)
