[project]
name = "openad_service_utils"
version = "0.4.0"
description = "Utility library to extend an existing model to OpenAD Toolkit and give it an API interface."
authors = [{name = "Brian Duenas", email = "brian.duenas@ibm.com"}]
requires-python = ">= 3.9"
dependencies = [
 "pydantic-settings",
 "minio",
 "pydantic",
 "pandas",
 "fastapi",
 "uvicorn",
 "colorlog",
 "tenacity",
 "redis",
 "aiofiles>=24.1.0",
]

[project.urls]
Homepage = "https://github.com/acceleratedscience/openad_service_utils"
Documentation = "https://github.com/acceleratedscience/openad_service_utils"
Repository = "https://github.com/acceleratedscience/openad_service_utils"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
